designing in browser

--- a/src/css/modules/feature.styl
+++ b/src/css/modules/feature.styl
@@ -1,7 +1,7 @@
 .feature
   &__layer
     background-attachment fixed
-    background-image url(img/museum-bw.jpg), linear-gradient(135deg, red, indigo)
+    background-image url(img/museum-bw.jpg), linear-gradient(135deg, #0fc, indigo)
     background-blend-mode overlay
     background-repeat no-repeat
     background-size cover
