--- a/src/css/global/button.styl
+++ b/src/css/global/button.styl
@@ -1,7 +1,10 @@
 [class*="__button"]
+  background-color #666
   border-radius 5px
   box-shadow -1px 1px 0 black
+  color white
   font-family roboto condensed
-  font-size 1.5rem
-  padding .5rem 1rem
+  font-size 1rem
+  margin-right 1rem
+  padding .25rem .5rem
   text-shadow 1px 1px 0 black
