--- a/src/css/modules/teachers/teachers.styl
+++ b/src/css/modules/teachers/teachers.styl
@@ -1,4 +1,6 @@
-.resource
+.teachers
+  &-feature__layer
+    background-image url(img/teachers-bw.jpg), linear-gradient(135deg, magenta, indigo)
   //
   &__layer
     //
