--- a/src/pug/htdocs/resources.pug
+++ b/src/pug/htdocs/resources.pug
@@ -1,63 +1,26 @@
-doctype html
-html(class='no-js')
-  head
-    meta(charset='utf-8')
-    meta(http-equiv='X-UA-Compatible', content='IE=edge')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    meta(name='format-detection', content='telephone=no')
+//- This page uses the global layout
+extends ../layout/global
 
-    title useumstl
-
-    meta(name='description', content='')
-    meta(name='viewport', content='width=device-width, initial-scale=1')
-
-    //link(rel='stylesheet', href='css/normalize.css')
-    link(rel='stylesheet', href='style.css')
-    //script(src='js/vendor/modernizr-2.6.2.min.js')
-    //- script(src='countUp.js')
-    //- script(src='waypoints.js')
-    //- script(src='inview.min.js')
-
-  body
-    .container
-      .nav__layer
-        .nav__container
-          a(href="#" class="nav__logo") <span>YOU</span>SEUM
-          div
-            a(href="#") About
-            a(href="#") Youth
-            a(href="#") Parents
-            a(href="#") Teachers
-            a(href="#") Counselors
-            a(href="resources.html") Resources
-            
-      .feature__layer
-        .feature__container
-          h1.feature__heading Resources
-          h2.feature__subheading Your museum data and job center
-          
-      #thing.resource__layer
-        .resource__container
-          .resource__content
-            for item in resources
-              .resource__item
-                h2=item.name
-                .resource__links
-                  for link in item.links
-                    a(href=`${link.url}` class="resource__button")=link.text
-
-          
-
-    //- script(src='//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
-    //- script window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')
-    //- script(src='js/plugins.js')
+//- Fill in title and description for SEO
+block seo
+  title=seo.resources.title
+  meta(name='description', content=`${seo.resources.description}`)
     
-    script(src='script.js')
-    //- 
-    //- script
-    //-   (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-    //-   function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-    //-   e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-    //-   e.src='//www.google-analytics.com/analytics.js';
-    //-   r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-    //-   ga('create','UA-XXXXX-X');ga('send','pageview');
+//- Index page specific content only
+block page
+  //- include ../includes/home/feature
+  
+  .resource-feature__layer
+    .resource-feature__container
+      h1.resource-feature__heading Resources
+      h2.resource-feature__subheading You will love it!
+  
+  .resource__layer
+    .resource__container
+      .resource__content
+        for item in resources
+          .resource__item
+            h2=item.name
+            .resource__links
+              for link in item.links
+                a(href=`${link.url}` class="resource__button")=link.text
