setting up pages

--- a/src/css/modules/counselors/feature.styl
+++ b/src/css/modules/counselors/feature.styl
@@ -1,6 +1,6 @@
 .counselors
   &-feature__layer
-    background-image url(img/counselors-bw.jpg), linear-gradient(135deg, tomato, indigo)
+    background-image url(img/counselors-bw.jpg), linear-gradient(135deg, #fc0, green, indigo)
   //
   &__layer
     //
