--- a/src/css/modules/parents/parents.styl
+++ b/src/css/modules/parents/parents.styl
@@ -1,6 +1,6 @@
 .parents
   &-feature__layer
-    background-image url(img/parents-bw.jpg), linear-gradient(135deg, tomato, indigo)
+    background-image url(img/parents-bw.jpg), linear-gradient(135deg, #fc0, indigo)
   //
   &__layer
     //
