--- a/src/css/modules/teachers/teachers.styl
+++ b/src/css/modules/teachers/teachers.styl
@@ -1,6 +1,6 @@
 .teachers
   &-feature__layer
-    background-image url(img/teachers-bw.jpg), linear-gradient(135deg, magenta, indigo)
+    background-image url(img/teachers-bw.jpg), linear-gradient(135deg, green, tomato)
   //
   &__layer
     //
