--- a/src/css/modules/youth/youth.styl
+++ b/src/css/modules/youth/youth.styl
@@ -1,6 +1,6 @@
 .youth
   &-feature__layer
-    background-image url(img/youth-bw.jpg), linear-gradient(135deg, magenta, indigo)
+    background-image url(img/youth-bw.jpg), linear-gradient(135deg, cyan, indigo)
   //
   &__layer
     //
