--- a/src/pug/htdocs/index.pug
+++ b/src/pug/htdocs/index.pug
@@ -24,6 +24,8 @@ block page
           span#count
             
   .youth__layer
+    .responsive-video-embed
+      iframe(width="100%" height="100vh" src="https://www.youtube.com/embed/J8GUYg6pwZs" frameborder="0" allowfullscreen)
     .youth__container
       .left 
         h1.youth__heading Youth
