--- a/src/css/global/colors.styl
+++ b/src/css/global/colors.styl
@@ -1,3 +1,6 @@
 // let's use hsla for all colors
-graphite = hsl(0, 0, 20%)
+charcoal = hsl(0, 0, 20%)
+graphite = hsl(0, 0, 40%)
+silver = hsl(0, 0, 60%)
+fog = hsl(0, 0, 80%)
 trans = transparent
