--- a/src/css/modules/homepage/youth.styl
+++ b/src/css/modules/homepage/youth.styl
@@ -1,6 +1,6 @@
 .youth
   &__layer
-    background-color #0fc
+    background-color white
     // background-attachment fixed
     // background-image url(img/museum-bw.jpg), linear-gradient(135deg, #0fc, indigo)
     // background-blend-mode overlay
@@ -16,3 +16,10 @@
     justify-content center
     height 100vh
     width 100vw
+
+  &__heading
+    color graphite
+    text-shadow -1px 1px 0 lighten(black, 80%)
+
+  &__subheading
+    color graphite
