--- a/src/pug/htdocs/index.pug
+++ b/src/pug/htdocs/index.pug
@@ -13,25 +13,39 @@ block page
   .homepage-feature__layer
     .homepage-feature__container
       h1.homepage-feature__heading Work at a museum
-      h2.homepage-feature__subheading You will love it!
+      h2.homepage-feature__subheading Here's why ->
+      
+      
+  .jobs__layer
+    .jobs__container
+      .jobs__card
+        h1.jobs__heading Museums are hiring!
+        h2.jobs__subheading Over 400,000 Americans are employed by museums, check out all these sweet jobs: 
+        .jobs__content
+          p Director, Curator, Registrar, Docent, Museum Educator, Exhibit Designer, Museum Protection Staff, Preparator, Public Relations, Show Worker, Building and Grounds Staff, Chef, Librarian, Accountant, Grant Coordinator, Housekeeper, AV Tech, HR, Membership Officer, Installer, Electrician, Carpenter, Financial Officer, Payroll officer, Public Historian
       
   #thing.data__layer
     .data__container
       .left 
-        h2.data__subheading Museums contribute $21 Billion to the United States economy each year (AAM Museum Factsheet)
+        h1.data__heading Did you know...
       .right
-        h1.data__heading $
-          span#count
+        h2.data__subheading Museums are considered the most trustworthy source of information in America!
+          span  People trust museums more than Newspapers, goverment and 
+          
+  #thing.data__layer
+    .data__container
+      .left 
+        h1.data__heading Did you know...
+      .right
+        h2.data__subheading Museums directly contribute $21 billion to the U.S. economy each year1
             
   .youth__layer
-    .responsive-video-embed
-      iframe(width="100%" height="100vh" src="https://www.youtube.com/embed/J8GUYg6pwZs" frameborder="0" allowfullscreen)
     .youth__container
-      .left 
-        h1.youth__heading Youth
-      .right
-        h2.youth__subheading $
-          span#count
+      h1.youth__heading There are dozens of job roles within a Museum
+      h2.youth__subheading Our Maplewood elementary students made a video to showcase all these exciting professions
+  .youth__layer
+    .responsive-video-embed
+          iframe( src="https://www.youtube.com/embed/J8GUYg6pwZs" frameborder="0" allowfullscreen)
             
   .parents__layer
     .parents__container
