working on homepage

--- a/src/pug/htdocs/index.pug
+++ b/src/pug/htdocs/index.pug
@@ -22,15 +22,19 @@ block page
         h1.jobs__heading Museums are hiring!
         h2.jobs__subheading Over 400,000 Americans are employed by museums, check out all these sweet jobs: 
         .jobs__content
-          p Director, Curator, Registrar, Docent, Museum Educator, Exhibit Designer, Museum Protection Staff, Preparator, Public Relations, Show Worker, Building and Grounds Staff, Chef, Librarian, Accountant, Grant Coordinator, Housekeeper, AV Tech, HR, Membership Officer, Installer, Electrician, Carpenter, Financial Officer, Payroll officer, Public Historian
+          p Director, Curator, Registrar, Docent, Museum Educator, Exhibit Designer, Museum Protection Staff, Preparator, Public Relations, Show Worker, Building and Grounds Staff, Chef, Librarian, Accountant, Grant Coordinator, Housekeeper, AV Tech, HR, Membership Officer, Installer, Electrician, Carpenter, Financial Officer, Payroll officer, Public Historian and more!
+          p
+            a(href="#") Watch video
+            a(href="#") See resources
       
-  #thing.data__layer
-    .data__container
-      .left 
-        h1.data__heading Did you know...
-      .right
-        h2.data__subheading Museums are considered the most trustworthy source of information in America!
-          span  People trust museums more than Newspapers, goverment and 
+  .gallery__layer
+    .gallery__container
+      h1.gallery__heading Here are four ways you can get started today
+      .gallery__gallery
+        a(href="/youth.html") Youth
+        a(href="/parents.html") Parents
+        a(href="/teachers.html") Teachers
+        a(href="/career-counselors.html") Career counselors
           
   #thing.data__layer
     .data__container
