--- a/src/css/modules/homepage/jobs.styl
+++ b/src/css/modules/homepage/jobs.styl
@@ -19,13 +19,17 @@
 
   &__card
     background-color white
+    box-shadow 0 10px 6px -6px charcoal;
     padding 3rem
 
   &__heading
     color indigo
+    font-size 4rem
 
   &__subheading
     color charcoal
+    padding 2rem
+    line-height 1
     text-shadow none
 
   &__content
