working on homepage still

--- a/src/css/modules/homepage/feature.styl
+++ b/src/css/modules/homepage/feature.styl
@@ -14,3 +14,20 @@
     //
   &__button
     //
+
+
+.lookdown
+  animation bounce 1.6s ease-in-out infinite
+
+  svg
+    fill white
+    filter drop-shadow(1px 1px 1px charcoal)
+
+
+@keyframes bounce
+	0%
+		transform translateY(0)
+	50%
+		transform translateY(10px)
+	100%
+		transform translateY(0)
