--- a/src/css/global/button.styl
+++ b/src/css/global/button.styl
@@ -1,10 +1,15 @@
 [class*="__button"]
-  background-color #666
+  background-color indigo
   border-radius 5px
-  box-shadow -1px 1px 0 black
+  //box-shadow -1px 1px 0 black
   color white
   font-family roboto condensed
   font-size 1rem
   margin-right 1rem
   padding .25rem .5rem
   text-shadow 1px 1px 0 black
+
+  &:hover
+    background-color cyan
+    color white
+    //text-shadow none
