working on home page

--- a/src/css/modules/homepage/jobs.styl
+++ b/src/css/modules/homepage/jobs.styl
@@ -35,3 +35,10 @@
   &__content
     color charcoal
     text-align center
+
+  &__box
+    display flex
+    justify-content space-around
+
+  &__button
+    overflow hidden
