--- a/src/css/modules/homepage/gallery.styl
+++ b/src/css/modules/homepage/gallery.styl
@@ -22,35 +22,59 @@
     flex-flow row wrap
     width 100%
 
-    a
-      background-size cover
-      background-blend-mode overlay
-      border 10px solid white
-      color white
-      display block
-      height 300px
-      width calc(50% - 2rem)
-      margin 1rem
+  &__item
+    background-size cover
+    background-blend-mode overlay
+    border 10px solid white
+    color white
+    display flex
+    align-items center
+    justify-content center
+    height 300px
+    width calc(50% - 2rem)
+    margin 1rem
+    box-shadow 0 10px 6px -6px charcoal
 
-      &:nth-of-type(1)
-        background-image url(img/museum-bw.jpg), linear-gradient(135deg, #0fc, indigo)
-      &:nth-of-type(2)
-        background-image url(img/parents-bw.jpg), linear-gradient(135deg, #fc0, indigo)
-      &:nth-of-type(3)
-        background-image url(img/teachers-bw.jpg), linear-gradient(135deg, green, tomato)
-      &:nth-of-type(4)
-        background-image url(img/counselors-bw.jpg), linear-gradient(135deg, #fc0, green, indigo)
+    &:nth-of-type(1)
+      background-image url(img/museum-bw.jpg), linear-gradient(135deg, #0fc, indigo)
+    &:nth-of-type(2)
+      background-image url(img/parents-bw.jpg), linear-gradient(135deg, #fc0, indigo)
+    &:nth-of-type(3)
+      background-image url(img/teachers-bw.jpg), linear-gradient(135deg, green, tomato)
+    &:nth-of-type(4)
+      background-image url(img/counselors-bw.jpg), linear-gradient(135deg, #fc0, green, indigo)
+
+  // a
+  //   background-color indigo
+  //   border-radius 25px
+  //   color white
+  //   padding .25rem 1rem
 
   &__heading
     // color indigo
     font-size 4rem
 
   &__subheading
-    color charcoal
+    color white
     padding 2rem
     line-height 1
-    text-shadow none
 
   &__content
     color charcoal
     text-align center
+
+
+  &__button
+    color white
+
+    &.white
+      color white
+
+      &::after
+        background-color white
+
+    &::after
+      background-color white
+
+    &:hover
+      color indigo
