--- a/src/pug/htdocs/index.pug
+++ b/src/pug/htdocs/index.pug
@@ -24,18 +24,23 @@ block page
         h2.jobs__subheading Over 400,000 Americans are employed by museums, check out all these sweet jobs: 
         .jobs__content
           p Director, Curator, Registrar, Docent, Museum Educator, Exhibit Designer, Museum Protection Staff, Preparator, Public Relations, Show Worker, Building and Grounds Staff, Chef, Librarian, Accountant, Grant Coordinator, Housekeeper, AV Tech, HR, Membership Officer, Installer, Electrician, Carpenter, Financial Officer, Payroll officer, Public Historian and more!
-          p
+          .jobs__box
             a.jobs__button(href="#") Watch video
             a.jobs__button(href="#") See resources
       
   .gallery__layer
     .gallery__container
-      h1.gallery__heading Here are four ways you can get started today
+      h1.gallery__heading There are opportunities for everyone
+      h2.gallery__subheading Just pick a path
       .gallery__gallery
-        a(href="/youth.html") Youth
-        a(href="/parents.html") Parents
-        a(href="/teachers.html") Teachers
-        a(href="/career-counselors.html") Career counselors
+        .gallery__item
+          a.gallery__button.white(href="/youth.html") Youth
+        .gallery__item
+          a.gallery__button.white(href="/parents.html") Parents
+        .gallery__item
+          a.gallery__button.white(href="/teachers.html") Teachers
+        .gallery__item
+          a.gallery__button.white(href="/career-counselors.html") Career counselors
         
   .resources__layer
     .resources__container
