working on home page

--- a/src/css/global/typography.styl
+++ b/src/css/global/typography.styl
@@ -54,7 +54,7 @@ body
   font-weight: Condensed.weight.normal
   line-height 1
   text-align center
-  text-shadow -1px 1px 0 black
+  text-shadow -3px 3px 0 charcoal
   text-transform uppercase
 
 [class*='__subheading']
@@ -62,14 +62,14 @@ body
   font-size 2rem
   font-weight: Condensed.weight.normal
   text-align center
-  text-shadow -1px 1px 0 black
+  text-shadow -3px 3px 0 charcoal
 
 [class*='__title']
   color white
   font-size 2rem
   font-weight 100
   text-align center
-  text-shadow -1px 1px 0 black
+  text-shadow -3px 3px 0 fog
 
 // Anchor text
 a
