--- a/src/css/modules/global/footer.styl
+++ b/src/css/modules/global/footer.styl
@@ -1,11 +1,10 @@
 .footer
   &__layer
-    background-color white
-    // background-attachment fixed
-    // background-image url(img/museum-bw.jpg), linear-gradient(135deg, #0fc, indigo)
-    // background-blend-mode overlay
-    // background-repeat no-repeat
-    // background-size cover
+    background-attachment fixed
+    background-image url(img/slam-bw.jpg), linear-gradient(-135deg, red, indigo)
+    background-blend-mode overlay
+    background-repeat no-repeat
+    background-size cover
     height 100vh
     position relative
 
