--- a/src/css/modules/homepage/jobs.styl
+++ b/src/css/modules/homepage/jobs.styl
@@ -25,6 +25,10 @@
   &__heading
     color indigo
     font-size 4rem
+    text-shadow -3px 3px 0 fog
+    // animation-duration 10s
+    // animation-delay 2s
+    // animation-iteration-count infinite
 
   &__subheading
     color charcoal
