--- a/src/pug/htdocs/index.pug
+++ b/src/pug/htdocs/index.pug
@@ -20,13 +20,36 @@ block page
   .jobs__layer
     .jobs__container
       .jobs__card
-        h1.jobs__heading Museums are hiring!
+        h1.jobs__heading.animated.bounceIn Museums are hiring!
         h2.jobs__subheading Over 400,000 Americans are employed by museums, check out all these sweet jobs: 
         .jobs__content
           p Director, Curator, Registrar, Docent, Museum Educator, Exhibit Designer, Museum Protection Staff, Preparator, Public Relations, Show Worker, Building and Grounds Staff, Chef, Librarian, Accountant, Grant Coordinator, Housekeeper, AV Tech, HR, Membership Officer, Installer, Electrician, Carpenter, Financial Officer, Payroll officer, Public Historian and more!
           .jobs__box
             a.jobs__button(href="#") Watch video
             a.jobs__button(href="#") See resources
+            
+  .stats__layer
+    h1.stats__heading Did you know...
+          
+    .stats__container
+      
+      .stats__box
+        .frame-border
+          .frame-inset
+            h3.stats__number#count 1,700
+        h2.stats__subheading people are employed by St. Louis area museums
+        
+      .stats__box
+        .frame-border
+          .frame-inset
+            h3.stats__number#count 40
+        h2.stats__subheading Museum and Non-profit arts and culture institutions in the St. Louis total more than
+        
+      .stats__box
+        .frame-border
+          .frame-inset
+            h3.stats__number#count 120
+        h2.stats__subheading million people visit Midwest museums each year
       
   .gallery__layer
     .gallery__container
@@ -42,13 +65,6 @@ block page
         .gallery__item
           a.gallery__button.white(href="/career-counselors.html") Career counselors
         
-  .resources__layer
-    .resources__container
-      .left 
-        h1.resources__heading Resources
-      .right
-        h2.resources__subheading $
-          span#count
           
   //- #thing.data__layer
   //-   .data__container
