--- a/src/css/global/button.styl
+++ b/src/css/global/button.styl
@@ -3,7 +3,7 @@
   border-radius 3rem
   color indigo
   display inline-block
-  //font-weight 100
+  //font-weight normal
   overflow hidden
   padding .5rem 1rem
   position relative
@@ -38,7 +38,7 @@
     transform translate(0, 0)
 
   &:hover
-    border 0
+    border 2px solid transparent
     color white
     transform scale(1.05)
     will-change transform
