--- a/src/css/modules/homepage/feature.styl
+++ b/src/css/modules/homepage/feature.styl
@@ -21,6 +21,10 @@
 .lookdown
   animation bounce 1.6s ease-in-out infinite
 
+  &:hover
+    svg
+      fill #0fc
+
   svg
     fill white
     filter drop-shadow(-3px 3px 0px charcoal)
