--- a/src/css/modules/homepage/stats.styl
+++ b/src/css/modules/homepage/stats.styl
@@ -38,6 +38,9 @@
     &:nth-of-type(even)
       flex-direction row-reverse
 
+      .stats__subheading
+        text-align right
+
 .frame-border
   position relative
   box-shadow 0 30px 36px rgba(0, 0, 0, 0.5)
