--- a/src/css/modules/resources/resources.styl
+++ b/src/css/modules/resources/resources.styl
@@ -7,10 +7,27 @@
   &__container
     //
   &__content
-    //
+    // display flex
+    // flex-direction row
+    // flex-wrap wrap
+    // width 100%
+
   &__item
-    //
+    //background-color fog
+    border-bottom 1px solid fog
+    margin 1%
+    padding 2rem
+    // flex-basis 30%
+
+  &__heading
+    color charcoal
+    text-shadow -3px 3px 0 fog
+    font-size 2rem
+    font-weight normal
+    padding-bottom 1rem
+    text-align left
+
   &__links
     //
   &__button
-    //
+    margin-right 1rem
