fixing section heights

--- a/src/pug/htdocs/youth.pug
+++ b/src/pug/htdocs/youth.pug
@@ -12,5 +12,15 @@ block page
   
   .youth-feature__layer
     .youth-feature__container
-      h1.youth-feature__heading youth
-      h2.youth-feature__subheading You will love it!
+      h1.youth-feature__heading It's never to early
+      h2.youth-feature__subheading to learn about museums
+      
+  .jobs__layer
+    .jobs__container
+      .jobs__card
+        h1.jobs__heading.animated.bounceIn There are dozens of job roles within a Museum
+        h2.jobs__subheading Our Maplewood elementary students made a video to showcase all these exciting professions
+        .jobs__content
+          .responsive-video-embed
+                iframe( src="https://www.youtube.com/embed/J8GUYg6pwZs" frameborder="0" allowfullscreen)
+      
