--- a/src/css/modules/homepage/counselors.styl
+++ b/src/css/modules/homepage/counselors.styl
@@ -14,5 +14,5 @@
     flex-direction column
     align-items center
     justify-content center
-    height 100vh
+    //height 100vh
     width 100vw
