--- a/src/css/modules/homepage/gallery.styl
+++ b/src/css/modules/homepage/gallery.styl
@@ -14,7 +14,8 @@
     flex-direction column
     align-items center
     justify-content center
-    height 100vh
+    //height 100vh
+    padding 5rem 0
     width 60vw
 
   &__gallery
