--- a/src/css/modules/homepage/jobs.styl
+++ b/src/css/modules/homepage/jobs.styl
@@ -6,7 +6,7 @@
     // background-blend-mode overlay
     background-repeat no-repeat
     background-size cover
-    height 100vh
+    //height 100vh
     position relative
 
   &__container
@@ -14,12 +14,14 @@
     flex-direction column
     align-items center
     justify-content center
-    height 100vh
+    //height 100vh
+    padding 5rem 0
     width 60vw
 
   &__card
     background-color white
-    box-shadow 0 10px 6px -6px charcoal;
+    box-shadow 0 10px 6px -6px charcoal
+    margin 3rem 0
     padding 3rem
 
   &__heading
