--- a/src/css/modules/homepage/stats.styl
+++ b/src/css/modules/homepage/stats.styl
@@ -7,7 +7,6 @@
     // background-repeat no-repeat
     // background-size cover
     //height 100vh
-    padding-bottom 5rem
     position relative
 
   &__container
@@ -15,7 +14,8 @@
     flex-direction column
     align-items center
     justify-content center
-    height 100vh
+    //height 100vh
+    padding 5rem 0
     width 100vw
 
   &__heading
