--- a/src/css/modules/homepage/youth.styl
+++ b/src/css/modules/homepage/youth.styl
@@ -14,7 +14,7 @@
     flex-direction column
     align-items center
     justify-content center
-    height 100vh
+    //height 100vh
     width 100vw
 
   &__heading
