--- a/src/pug/htdocs/youth.pug
+++ b/src/pug/htdocs/youth.pug
@@ -22,5 +22,7 @@ block page
         h2.jobs__subheading Our Maplewood elementary students made a video to showcase all these exciting professions
         .jobs__content
           .responsive-video-embed
-                iframe( src="https://www.youtube.com/embed/J8GUYg6pwZs" frameborder="0" allowfullscreen)
+            iframe( src="https://www.youtube.com/embed/J8GUYg6pwZs" frameborder="0" allowfullscreen)
+          .responsive-video-embed
+            iframe( src="https://www.yumpu.com/xx/embed/view/otRKJGbXn9vDiEUQ" frameborder="0" allowfullscreen="true" allowtransparency="true")
       
