working on animations

--- a/src/css/modules/homepage/jobs.styl
+++ b/src/css/modules/homepage/jobs.styl
@@ -29,7 +29,7 @@
     font-size 4rem
     text-shadow -3px 3px 0 fog
     // animation-duration 10s
-    // animation-delay 2s
+    //animation-delay .5s
     // animation-iteration-count infinite
 
   &__subheading
