--- a/src/css/modules/pages/teachers.styl
+++ b/src/css/modules/pages/teachers.styl
@@ -1,8 +1,7 @@
-.youth
-  &-feature__layer
-    background-image url(img/youth-bw.jpg), linear-gradient(135deg, cyan, indigo)
-  //
+.teachers.feature
+
   &__layer
+    background-image url(img/teachers-bw.jpg), linear-gradient(135deg, green, tomato)
     //
   &__container
     //
