--- a/src/css/modules/pages/youth.styl
+++ b/src/css/modules/pages/youth.styl
@@ -1,9 +1,7 @@
-.teachers
-  &-feature__layer
-    background-image url(img/teachers-bw.jpg), linear-gradient(135deg, green, tomato)
-  //
+.youth.feature
   &__layer
-    //
+    background-image url(img/youth-bw.jpg), linear-gradient(135deg, cyan, indigo)
+
   &__container
     //
   &__content
