--- a/src/pug/htdocs/career-counselors.pug
+++ b/src/pug/htdocs/career-counselors.pug
@@ -10,8 +10,14 @@ block seo
 block page
   //- include ../includes/home/feature
   
-  .counselors-feature__layer
-    .counselors-feature__container
-      h1.counselors-feature__heading Career Counselors
-      h2.counselors-feature__subheading You will love it!
+  .counselors.feature__layer
+    .feature__container
+      h1.feature__heading Career Counselors
+      h2.feature__subheading You will love it!
+      
+  .page__layer
+    .page__container
+      .page__content
+        
+        include ../includes/global/media
           
