--- a/src/pug/htdocs/parents.pug
+++ b/src/pug/htdocs/parents.pug
@@ -10,7 +10,13 @@ block seo
 block page
   //- include ../includes/home/feature
   
-  .parents-feature__layer
-    .parents-feature__container
-      h1.parents-feature__heading Parents
-      h2.parents-feature__subheading You will love it!
+  .parents.feature__layer
+    .feature__container
+      h1.feature__heading Parents
+      h2.feature__subheading You will love it!
+
+  .page__layer
+    .page__container
+      .page__content
+        
+        include ../includes/global/media
