--- a/src/pug/htdocs/resources.pug
+++ b/src/pug/htdocs/resources.pug
@@ -13,7 +13,7 @@ block page
   .resource-feature__layer
     .resource-feature__container
       h1.resource-feature__heading Resources
-      h2.resource-feature__subheading To get a job or to get involved
+      h2.resource-feature__subheading Get a job/Get involved
   
   .resource__layer
     .resource__container
