--- a/src/pug/htdocs/teachers.pug
+++ b/src/pug/htdocs/teachers.pug
@@ -10,7 +10,13 @@ block seo
 block page
   //- include ../includes/home/feature
   
-  .teachers-feature__layer
-    .teachers-feature__container
-      h1.teachers-feature__heading Teachers
-      h2.teachers-feature__subheading You will love it!
+  .teachers.feature__layer
+    .feature__container
+      h1.feature__heading Teachers
+      h2.feature__subheading You will love it!
+
+  .page__layer
+    .page__container
+      .page__content
+        
+        include ../includes/global/media
