--- a/src/css/modules/global/nav.styl
+++ b/src/css/modules/global/nav.styl
@@ -16,10 +16,11 @@
     margin 0
     //padding 0 2rem
     max-width 100%
-    font-size 1rem
+    //font-size 1rem
 
     h1
       text-transform uppercase
+      font-size 1.2rem
 
       span
         font-weight: Condensed.weight.bold
