--- a/src/css/modules/homepage/stats.styl
+++ b/src/css/modules/homepage/stats.styl
@@ -1,22 +1,43 @@
 .stats
   &__layer
-    background-color graphite
     // background-attachment fixed
     // background-image url(img/museum-bw.jpg), linear-gradient(135deg, #0fc, indigo)
     // background-blend-mode overlay
     // background-repeat no-repeat
     // background-size cover
     //height 100vh
-    position relative
 
   &__container
     display flex
     flex-direction column
     align-items center
     justify-content center
-    //height 100vh
-    padding 5rem 0
-    width 100vw
+    height 100vh
+    //padding 5rem 0
+    max-width 100vw
+    overflow hidden
+
+    &:nth-of-type(1)
+      background-color graphite
+      height auto
+    &:nth-of-type(2)
+      background-color darken(graphite, 10%)
+    &:nth-of-type(3)
+      background-color darken(graphite, 20%)
+    &:nth-of-type(4)
+      background-color darken(graphite, 30%)
+
+    &:nth-of-type(odd)
+      .stats__box
+        flex-direction row-reverse
+        transform translateX(-20%)
+        will-change transform
+
+        &.move
+          transform translateX(0)
+
+        .stats__subheading
+          text-align right
 
   &__heading
     padding 5rem 0
@@ -29,24 +50,31 @@
     flex 2
     padding 0 2rem
     text-align left
+    max-width 800px
+    opacity 0
+    transition opacity 3s
+    will-change transform
+
+    &.reveal
+      opacity 1
 
   &__box
     align-items center
+    justify-content center
     display flex
-    margin-bottom 2.5rem
+    padding 0 5rem
+    transform translateX(20%)
+    transition transform 1.5s ease-in-out
 
-    &:nth-of-type(even)
-      flex-direction row-reverse
-
-      .stats__subheading
-        text-align right
+    &.move
+      transform translateX(0)
 
 .frame-border
   position relative
   box-shadow 0 30px 36px rgba(0, 0, 0, 0.5)
   border 11px solid #ededed
-  flex 1
-  //width 457px
+  width 400px
+  //max-width 25rem
   //height 547px
 
 .frame-inset
@@ -55,7 +83,7 @@
   border 32px solid #f5f5f5
   max-width 100%
   max-height 100%
-  padding 72px 49px
+  padding 3rem 0
 
   &:before
     content: ''
