--- a/src/css/modules/homepage/feature.styl
+++ b/src/css/modules/homepage/feature.styl
@@ -1,5 +1,5 @@
-.homepage
-  &-feature__layer
+.homepage.feature
+  &__layer
     background-image url(img/museum-bw.jpg), linear-gradient(135deg, #0fc, indigo)
   //
   &__layer
