--- a/src/css/modules/homepage/stats.styl
+++ b/src/css/modules/homepage/stats.styl
@@ -18,14 +18,16 @@
     overflow hidden
 
     &:nth-of-type(1)
-      background-color graphite
+      background-color indigo
       height auto
     &:nth-of-type(2)
-      background-color darken(graphite, 10%)
+      background-color lighten(indigo, 10%)
     &:nth-of-type(3)
-      background-color darken(graphite, 20%)
+      background-color lighten(indigo, 20%)
     &:nth-of-type(4)
-      background-color darken(graphite, 30%)
+      background-color lighten(indigo, 30%)
+    &:nth-of-type(5)
+      background-color lighten(indigo, 40%)
 
     &:nth-of-type(odd)
       .stats__box
@@ -79,7 +81,7 @@
 
 .frame-inset
   box-shadow inset 0 1px 5px rgba(0, 0, 0, 0.5)
-  background-color #bebebe
+  background-color #EEFF41  //#bebebe
   border 32px solid #f5f5f5
   max-width 100%
   max-height 100%
@@ -95,3 +97,11 @@
     width 100%
     height 100%
     box-shadow inset 0 20px 20px rgba(0, 0, 0, 0.3)
+
+.dataSource
+  color charcoal
+  font-size .8rem
+  text-shadow none
+
+  &:before
+    content: '- '
