--- a/src/pug/htdocs/parents.pug
+++ b/src/pug/htdocs/parents.pug
@@ -13,10 +13,11 @@ block page
   .parents.feature__layer
     .feature__container
       h1.feature__heading Parents
-      h2.feature__subheading You will love it!
+      h2.feature__subheading Kids love museums and museums love kids too
 
   .page__layer
     .page__container
       .page__content
+        p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu.
         
         include ../includes/global/media
