--- a/src/pug/htdocs/career-counselors.pug
+++ b/src/pug/htdocs/career-counselors.pug
@@ -13,11 +13,12 @@ block page
   .counselors.feature__layer
     .feature__container
       h1.feature__heading Career Counselors
-      h2.feature__subheading You will love it!
+      h2.feature__subheading Let's start simple
       
   .page__layer
     .page__container
       .page__content
+        p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel eum iriure dolor in hendrerit in vulputate velit esse molestie consequat, vel illum dolore eu.
         
         include ../includes/global/media
           
